# token-optim

./: .gitignore  .mcp.json  .ministr.toml  AGENTS.md  CONTRIBUTING.md  DESIGN.md  INTEGRATIONS.md  LAUNCH.md  LICENSE  README.md  REPORT.md  RESULTS.md  SAMPLE_REPORT.html  SECURITY.md  advisory.py  allocator.py  alternatives.py  benchmark.py  calibrate.py  cli.py  demo.py  enforcement.py  incentives.py  ledger.py  pyproject.toml  simulator.py  snapshots.py  test_advisory.py  test_allocator.py  test_alternatives.py  test_benchmark.py  test_calibrate.py  test_cli.py  test_demo.py  test_enforcement.py  test_incentives.py  test_ledger.py  test_simulator.py  test_snapshots.py
.claude/: settings.json
.claude/hooks/: steer-to-ministr.sh
.claude/rules/: ministr-lang-rules.md  ministr-scope.md  tools.md
docs/: index.html
gui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
gui/.storybook/: main.ts  preview.tsx  vitest.setup.ts
gui/src/: App.tsx  clarity.test.ts  clarity.ts  cohesion.test.ts  domain.ts  fonts.ts  hash.test.ts  hash.ts  main.tsx  rules-spec.json  rules.test.ts  rules.ts  sound.test.ts  sound.ts  store.test.ts  store.ts  tokens.css  voice.test.ts  voice.ts  vt.test.ts  vt.ts
gui/src/components/: BrandChip.stories.tsx  BrandChip.tsx  CaveatBlock.stories.tsx  CaveatBlock.tsx  Clarity.stories.tsx  ClientTile.stories.tsx  ClientTile.tsx  EmptyState.tsx  EvidencePanel.stories.tsx  EvidencePanel.tsx  FirstRunSlip.tsx  Gloss.tsx  InkBleedDefs.stories.tsx  InkBleedDefs.tsx  Letterhead.stories.tsx  (+27 more)
(+17 files in other folders)
